# gizmo

./: Cargo.toml  README.md  install.sh  syntax.md
examples/: bouncing_balls.gzmo  digital_rain.gzmo  morph.gzmo  psychedelic_tunnel.gzmo  simple_rain.gzmo  simple_test.gzmo  simple_tunnel.gzmo  spinner.gzmo  spinner2.gzmo  waves.gzmo
interpreter_modules/: ast.rs  builtin.rs  error.rs  frame.rs  interpreter.rs  lexer.rs  parser.rs
src/: ast.rs  builtin.rs  daemon.rs  error.rs  frame.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
