[package]
name = "gizmo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gizmo"
path = "src/main.rs"

[dependencies]
winit = "0.29"
softbuffer = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
raw-window-handle = "0.6"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"